Centered cards in cells and added media query to prevent overflow when screen width below 600px

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,12 @@ button {
     align-items: center;
 }
 
+@media screen and (max-width: 600px) {
+    .book-details-pane {
+        width: 100%;
+    }
+  }
+
 .book-details-pane.active {
     right: 0;
 }
@@ -186,6 +192,7 @@ svg.btn {
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
     gap: 1rem;
     overflow-y: auto;
+    justify-items: center;
 }
 
 .book-card {
